# OpenRTI

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AbstractLogicalTime.h  AbstractMessage.cpp  AbstractMessage.h  AbstractMessageDispatcher.h  AbstractMessageEncoding.h  AbstractMessageReceiver.h  AbstractMessageSender.cpp  AbstractNetworkStatistics.h  AbstractProtocolLayer.cpp  AbstractServer.cpp  AbstractServer.h  AbstractServerNode.cpp  AbstractServerNode.h  Ambassador.h  CHANGES  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  ClassDiagram.cd  Clock.h  Condition.h  DebugNew.h  DecodeDataStream.h  Exception.cpp  Exception.h  ExpatXMLReader.cpp  Export.h  FDD1516EFileReader.cpp  FDD1516EFileReader.h  FDD1516FileReader.cpp  FEDFileReader.cpp  FOMStringModuleBuilder.h  Federate.cpp  Federate.h  FederateHandleLowerBoundTimeStampMap.h  Handle.h  InitialClientStreamProtocol.cpp  (+76 more)
examples/ManagerFederate/: CMakeLists.txt  ManagerFederate.h  ManagerFederate.vcxproj  ManagerFederate.vcxproj.filters  MomFederate.h  MomFederation.h  main.cpp
python/: CMakeLists.txt  CTestTestfile.cmake
python/rti1516/: CMakeLists.txt  Module.cpp  pyrti1516.vcxproj
python/rti1516e/: CMakeLists.txt  Module.cpp  pyrti1516e.vcxproj
python/rti1516ev/: CMakeLists.txt  Module.cpp  pyrti1516ev.vcxproj  pyrti1516ev.vcxproj.filters
src/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
src/OpenRTI/: AbsTimeout.cpp  AbsTimeout.h  AbstractConnect.h  AbstractMessage.cpp  AbstractMessage.h  AbstractMessageDispatcher.h  AbstractMessageEncoding.cpp  AbstractMessageEncoding.h  AbstractMessageQueue.h  AbstractMessageReceiver.h  AbstractMessageSender.cpp  AbstractMessageSender.h  AbstractNetworkStatistics.h  AbstractNotificationHandle.h  AbstractProtocol.h  AbstractProtocolLayer.cpp  AbstractProtocolLayer.h  AbstractProtocolSocket.cpp  AbstractProtocolSocket.h  AbstractServer.cpp  AbstractServer.h  AbstractServerNode.cpp  AbstractServerNode.h  AbstractSocketEvent.cpp  AbstractSocketEvent.h  Ambassador.h  Atomic.h  Attributes.cpp  Attributes.h  Buffer.h  CMakeLists.txt  CTestTestfile.cmake  Clock.h  Condition.h  ContentHandler.cpp  ContentHandler.h  DebugNew.h  DefaultErrorHandler.cpp  DefaultErrorHandler.h  DynamicModule.h  (+118 more)
src/OpenRTI/codegen/: Message.xml  messagegen.py
src/OpenRTI/encoding/: BasicDataElements.cpp  (+18 more)
src/RTI13/: AttributeHandleSetCallback.cpp  AttributeHandleSetCallback.h  AttributeHandleSetImplementation.cpp  AttributeHandleSetImplementation.h  AttributeHandleValuePairSetCallback.cpp  AttributeHandleValuePairSetCallback.h  AttributeHandleValuePairSetImplementation.cpp  AttributeHandleValuePairSetImplementation.h  CMakeLists.txt  CTestTestfile.cmake  FedTime.vcxproj  FedTime.vcxproj.filters  FedTimeStub.vcxproj  FedTimeStub.vcxproj.filters  FederateHandleSetImplementation.cpp  FederateHandleSetImplementation.h  ParameterHandleValuePairSetCallback.cpp  ParameterHandleValuePairSetCallback.h  ParameterHandleValuePairSetImplementation.cpp  ParameterHandleValuePairSetImplementation.h  RTI-NG.vcxproj  RTI-NG.vcxproj.filters  RTI13LogicalTimeFactory.cpp  RTIambPrivateRefs.cpp  RTIfedTime.cpp  cmake_install.cmake
src/Tools/: CMakeLists.txt
src/rti1516/: CMakeLists.txt  CTestTestfile.cmake  Exception.cpp  FederateAmbassador.cpp  HLAfloat64Interval.cpp  HLAfloat64Time.cpp  HLAfloat64TimeFactory.cpp  HLAinteger64Interval.cpp  HLAinteger64Time.cpp  HLAinteger64TimeFactory.cpp  Handle.cpp  HandleImplementation.h  LogicalTime.cpp  LogicalTimeFactory.cpp  LogicalTimeFactoryFactory.cpp  LogicalTimeInterval.cpp  RTI1516LogicalTimeFactory.cpp  RTI1516LogicalTimeFactory.h  RTI1516fedTime.cpp  RTI1516float64TimeFactory.h  RTIambassador.cpp  RTIambassadorFactory.cpp  RTIambassadorImplementation.cpp  RTIambassadorImplementation.h  RangeBounds.cpp  Version.cpp  cmake_install.cmake  fedtime1516.vcxproj  fedtime1516.vcxproj.filters  fedtime1516Stub.vcxproj  fedtime1516Stub.vcxproj.filters  rti1516.vcxproj  rti1516.vcxproj.filters
src/rti1516e/: BasicDataElements.cpp  CMakeLists.txt  CTestTestfile.cmake  DataElement.cpp  Encoding.h  EncodingExceptions.cpp  Exception.cpp  FederateAmbassador.cpp  HLAfixedArray.cpp  HLAfixedRecord.cpp  HLAfloat64Interval.cpp  HLAfloat64Time.cpp  HLAfloat64TimeFactory.cpp  HLAhandle.cpp  HLAinteger64Interval.cpp  HLAinteger64Time.cpp  HLAinteger64TimeFactory.cpp  HLAlogicalTimeFactoryFactory.cpp  HLAopaqueData.cpp  HLAvariableArray.cpp  HLAvariantRecord.cpp  Handle.cpp  HandleFactory.cpp  HandleFactory.h  HandleImplementation.h  LogicalTime.cpp  LogicalTimeFactory.cpp  LogicalTimeFactoryFactory.cpp  LogicalTimeInterval.cpp  NullFederateAmbassador.cpp  RTI1516ELogicalTimeFactory.cpp  RTI1516ELogicalTimeFactory.h  RTI1516Efloat64TimeFactory.h  RTIambassador.cpp  RTIambassadorFactory.cpp  RTIambassadorImplementation.cpp  RTIambassadorImplementation.h  RangeBounds.cpp  Typedefs.cpp  VariableLengthData.cpp  (+11 more)
src/rti1516ev/: BasicDataElements.cpp  CMakeLists.txt  DataElement.cpp  Encoding.h  EncodingExceptions.cpp  Exception.cpp  FederateAmbassador.cpp  HLAarrayImplementation.h  HLAfixedArray.cpp  HLAfixedRecord.cpp  HLAfloat64Interval.cpp  HLAfloat64Time.cpp  HLAfloat64TimeFactory.cpp  HLAhandle.cpp  HLAinteger64Interval.cpp  HLAinteger64Time.cpp  HLAinteger64TimeFactory.cpp  HLAlogicalTimeFactoryFactory.cpp  HLAopaqueData.cpp  HLAstandardMIM.inc  HLAvariableArray.cpp  HLAvariantRecord.cpp  Handle.cpp  HandleFactory.cpp  HandleFactory.h  HandleImplementation.h  LogicalTime.cpp  LogicalTimeFactory.cpp  LogicalTimeFactoryFactory.cpp  LogicalTimeInterval.cpp  NullFederateAmbassador.cpp  RTI1516ELogicalTimeFactory.cpp  RTI1516ELogicalTimeFactory.h  RTI1516Efloat64TimeFactory.h  RTI1516Einteger64TimeFactory.h  RTIambassador.cpp  RTIambassadorFactory.cpp  RTIambassadorImplementation.cpp  RTIambassadorImplementation.h  RangeBounds.cpp  (+12 more)
src/rtinode/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  rtinode-config.xml  rtinode.cpp  rtinode.rc  rtinode.vcxproj  rtinode.vcxproj.filters
tests/rti1516e/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
(+604 files in other folders)
