if (OPENRTI_EXCLUDE_INSTALL)
	add_subdirectory(OpenRTI EXCLUDE_FROM_ALL)
else()
	add_subdirectory(OpenRTI)
endif()

option(OPENRTI_BUILD_RTINODE "Build the rtinode" ON)
if (OPENRTI_BUILD_RTINODE)
	add_subdirectory(rtinode)
endif()

option(OPENRTI_BUILD_TOOLS "Build additional tools (fom2cpp, FOMCodeGen)" ON)
if (OPENRTI_BUILD_TOOLS)
	add_subdirectory(Tools)
endif()

if (OPENRTI_EXCLUDE_INSTALL)
	add_subdirectory(rti1516ev EXCLUDE_FROM_ALL)
else()
	add_subdirectory(rti1516ev)
endif()