if (OPENRTI_EXCLUDE_INSTALL)
	add_subdirectory(OpenRTI EXCLUDE_FROM_ALL)
else()
	add_subdirectory(OpenRTI)
endif()

option(OPENRTI_BUILD_RTINODE "Build the rtinode" ON)
if (OPENRTI_BUILD_RTINODE)
	add_subdirectory(rtinode)
endif()

if (OPENRTI_EXCLUDE_INSTALL)
	add_subdirectory(Tools EXCLUDE_FROM_ALL)
	add_subdirectory(rti1516ev EXCLUDE_FROM_ALL)
else()
	add_subdirectory(Tools)
	add_subdirectory(rti1516ev)
endif()